crates/oxc_css_parser/tests/error/at-rule/supports/invalid-1.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `'('`, but found `[`
  ┌─ invalid-1.css:1:11
  │
1 │ @supports [margin: 0] {
  │           ^


